--- a/scss/main.css
+++ b/scss/main.css
@@ -12,8 +12,7 @@ button,
 a,
 i,
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -21,9 +20,8 @@ i,
   -webkit-tap-highlight-color: transparent;
   text-decoration: none;
   color: inherit;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
-
 h1:focus,
 h2:focus,
 h3:focus,
@@ -46,12 +44,8 @@ body {
 }
 
 body {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
   padding-left: 5px;
@@ -72,11 +66,34 @@ body {
   z-index: 2;
 }
 
-.form-signin input[type="email"] {
+.form-signin input[type=email] {
   margin-bottom: 10px;
 }
 
-.form-signin input[type="password"] {
+.form-signin input[type=password] {
   margin-bottom: 10px;
 }
-/*# sourceMappingURL=main.css.map */
+
+.tab-style {
+  flex-wrap: nowrap;
+  color: black;
+  background-color: #8AA6A3;
+  border: none;
+}
+
+.nav-tabs .nav-link.active, .nav-link {
+  background-color: #8AA6A3;
+  color: black;
+  border: none !important;
+}
+
+.nav-tabs:hover {
+  background-color: #8AA6A3;
+  color: #127369;
+}
+
+.nav-link:hover {
+  background-color: #8AA6A3;
+  color: #127369;
+  border: none;
+}/*# sourceMappingURL=main.css.map */
