--- a/scss/parciales/_body.scss
+++ b/scss/parciales/_body.scss
@@ -56,4 +56,13 @@ body {
     color :#127369;
     border: none;
   }
+
   
+  
+
+  .node-bg{
+    background-color: #8AA6A3;
+    border-color: #127369;
+    color: black;
+
+  }
