--- a/scss/main.css
+++ b/scss/main.css
@@ -12,7 +12,8 @@ button,
 a,
 i,
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -20,8 +21,9 @@ i,
   -webkit-tap-highlight-color: transparent;
   text-decoration: none;
   color: inherit;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
+
 h1:focus,
 h2:focus,
 h3:focus,
@@ -44,8 +46,12 @@ body {
 }
 
 body {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
   padding-left: 5px;
@@ -66,16 +72,17 @@ body {
   z-index: 2;
 }
 
-.form-signin input[type=email] {
+.form-signin input[type="email"] {
   margin-bottom: 10px;
 }
 
-.form-signin input[type=password] {
+.form-signin input[type="password"] {
   margin-bottom: 10px;
 }
 
 .tab-style {
-  flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   color: black;
   background-color: #8AA6A3;
   border: none;
@@ -96,4 +103,11 @@ body {
   background-color: #8AA6A3;
   color: #127369;
   border: none;
-}/*# sourceMappingURL=main.css.map */
+}
+
+.node-bg {
+  background-color: #8AA6A3;
+  border-color: #127369;
+  color: black;
+}
+/*# sourceMappingURL=main.css.map */
