--- a/scss/main.css
+++ b/scss/main.css
@@ -110,4 +110,59 @@ body {
   border-color: #127369;
   color: black;
 }
+
+.form-check-input:checked {
+  background-color: #127369;
+  border: none;
+}
+
+.btn-calculo {
+  font-size: 17px;
+  color: #e1e1e1;
+  font-family: inherit;
+  font-weight: 800;
+  cursor: pointer;
+  position: relative;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  -webkit-transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+          transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  -webkit-transition-duration: 400ms;
+          transition-duration: 400ms;
+  -webkit-transition-property: color;
+  transition-property: color;
+}
+
+.btn-calculo:focus,
+.btn-calculo:hover {
+  color: #127369;
+}
+
+.btn-calculo:focus:after,
+.btn-calculo:hover:after {
+  width: 100%;
+  left: 0%;
+}
+
+.btn-calculo:after {
+  content: "";
+  pointer-events: none;
+  bottom: -2px;
+  left: 50%;
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  background-color: #127369;
+  -webkit-transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+          transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  -webkit-transition-duration: 400ms;
+          transition-duration: 400ms;
+  -webkit-transition-property: width, left;
+  transition-property: width, left;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
 /*# sourceMappingURL=main.css.map */
