--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,3 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&family=Righteous&family=Roboto&family=Signika+Negative:wght@500&display=swap');
 @import "./parciales/basics";
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 @import "./parciales/body";
